syntax = "proto3";

option csharp_namespace = "GrpsServer";

package messanger;
import "google/protobuf/timestamp.proto";

service Messanger {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
  rpc MessageStream (stream MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string username = 1;
  string message = 2;
}


message MessageResponse {
  string username = 1;
  google.protobuf.Timestamp receipttime = 2;
}
